fixed horizontal scroll bug

--- a/docs/style.css
+++ b/docs/style.css
@@ -9,6 +9,12 @@ html {
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 a {
     text-decoration: none;
 }
